--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <h2>about</h2>
           <div class="underline"></div>
           <p>
-Hi all! I am Francesco Leccese but you can call me Franek. I am a <i>Front-End Developer</i>  based in Italy with <i>Marketing and Communication</i> studies and six years of experience providing IT services for customers geographically dispersed all over the world. 
+Hi all! I am Francesco Leccese but you can call me Franek. I am a <i>Front-End Developer</i>  based in Italy with <i>Marketing and Communication</i> studies and six years of experience providing IT services for customers geographically dispersed all over the world and one year of experience in web development. 
 
           </p>
           <p>
@@ -174,7 +174,7 @@ Deep care of the overall style of your app combined with the focus on the actual
       <div class="section-title">
         <h2>latest works</h2>
         <div class="underline"></div>
-        <p class="latest-works-text"> Here below you can find some of my latest works and many more are stored in my <a class="cc" href="./projects.html">projects page</a> where you can also find their <i>source code</i>. </p>
+        <p class="latest-works-text"> Here below you can find some of my latest works and many more are stored in my <a class="cc" href="./projects.html">projects page</a></p>
       </div>
       <div class=" latest-works-center">
               <a href="https://www.mariamartinelli.it/immagini/blues-tarot-website/index.html" target="_blank" class="area area-1">
