--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             </li>
           </ul>
         </article>
-        <article class="banner-image">
-          <img src="./images/green2.jpg" alt="" class="banner-pic" />
+        <article class="banner-image" style="border: 0.25rem solid #22c55e; border-radius: 0.5rem;">
+          <img src="./images/franekLogo.png" alt="" class="banner-pic" />
         </article>
       </div>
     </header>
