--- a/projects.html
+++ b/projects.html
@@ -43,17 +43,23 @@
         </div>
         <ul class="nav-links">
           <li class="nav-link">
-            <a href="./index.html">home</a>
+            <a class="navHome" href="./index.html">home</a>
           </li>
           <li class="nav-link">
-            <a href="./about.html">about</a>
+            <a class="navAbout" href="./about.html">about</a>
           </li>
           <li class="nav-link">
-            <a href="./projects.html">projects</a>
+            <a class="navProjects" href="./projects.html">projects</a>
           </li>
           <li class="nav-link">
-            <a href="./contact.html">contact</a>
+            <a class="navContact" href="./contact.html">contact</a>
           </li>
+
+          <div class="langWrap">
+            <a href="#" language="english" class="active">EN</a>
+            <a href="#" language="italian">ITA</a>
+            <!-- <a href="#" language="japanese">あ</a> -->
+          </div>
         </ul>
       </div>
     </nav>
@@ -67,16 +73,16 @@
         </div>
         <ul class="sidebar-links">
           <li class="sidebar-link">
-            <a href="./index.html">home</a>
+            <a class="sidebarHome" href="./index.html">home</a>
           </li>
           <li class="sidebar-link">
-            <a href="./about.html">about</a>
+            <a class="sidebarAbout" href="./about.html">about</a>
           </li>
           <li class="sidebar-link">
-            <a href="./projects.html">projects</a>
+            <a class="sidebarProjects" href="./projects.html">projects</a>
           </li>
           <li class="sidebar-link">
-            <a href="./contact.html">contact</a>
+            <a class="sidebarContact" href="./contact.html">contact</a>
           </li>
         </ul>
         <ul class="sidebar-icons">
@@ -94,12 +100,13 @@
     </aside>
 
     <!--------------------------end of sidebar----------------------->
+    <!-- test -->
 
     <!--------------------------header----------------------->
 
     <header class="project-page-header section">
       <div class="section-title">
-        <h1>my projects</h1>
+        <h1 class="singleProjectsTitle">my projects</h1>
         <div class="underline"></div>
       </div>
     </header>
@@ -478,5 +485,5 @@
       </div>
     </footer>
   </body>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </html>
