--- a/contact.html
+++ b/contact.html
@@ -43,17 +43,24 @@
         </div>
         <ul class="nav-links">
           <li class="nav-link">
-            <a href="./index.html">home</a>
+            <a class="navHome" href="./index.html">home</a>
           </li>
           <li class="nav-link">
-            <a href="./about.html">about</a>
+            <a class="navAbout" href="./about.html">about</a>
           </li>
           <li class="nav-link">
-            <a href="./projects.html">projects</a>
+            <a class="navProjects" href="./projects.html">projects</a>
           </li>
           <li class="nav-link">
-            <a href="./contact.html">contact</a>
+            <a class="navContact" href="./contact.html">contact</a>
           </li>
+          <!-- test -->
+
+          <div class="langWrap">
+            <a href="#" language="english" class="active">EN</a>
+            <a href="#" language="italian">ITA</a>
+            <!-- <a href="#" language="japanese">あ</a> -->
+          </div>
         </ul>
       </div>
     </nav>
@@ -94,19 +101,25 @@
     </aside>
 
     <!--------------------------end of sidebar----------------------->
+
     <!--------------------------header----------------------->
 
     <header class="page-header section">
       <div class="section-title">
-        <h1>contact</h1>
+        <h1 class="singleContactTitle">contact</h1>
         <div class="underline"></div>
       </div>
       <div class="section-center">
         <p class="page-text">
-          If you are looking to get ahold of me, you can send me an email at
+          <span class="singleContactText1">
+            If you are looking to get ahold of me, you can send me an email at
+          </span>
           <a class="page-link" href="mailto:franekdev86@gmail.com"
             >franekdev86@gmail.com</a
-          >. You can also reach me on Linkedin at
+          >
+          <span class="singleContactText2">
+            . You can also reach me on Linkedin at
+          </span>
           <a class="page-link" href="https://www.linkedin.com/in/franekDev"
             >@FranekDev</a
           >
@@ -137,5 +150,5 @@
       </div>
     </footer>
   </body>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </html>
