--- a/about.html
+++ b/about.html
@@ -35,33 +35,35 @@
       <div class="nav-center">
         <div class="nav-header">
           <div class="nav-logo">
-            <h2>Franek<span class="temporary">Dev</span></h2>
+            <!-- <img src="./images/navLogo2.png" alt="" style="width: 8rem;"> -->
+            <h2>
+              franek<span class="temporary"
+                ><span class="capitalize">d</span>ev</span
+              >
+            </h2>
+          </div>
+          <ul class="nav-links">
+            <li class="nav-link">
+              <a class="navHome" href="./index.html">home</a>
+            </li>
+            <li class="nav-link">
+              <a class="navAbout" href="./about.html">about</a>
+            </li>
+            <li class="nav-link">
+              <a class="navProjects" href="./projects.html">projects</a>
+            </li>
+            <li class="nav-link">
+              <a class="navContact" href="./contact.html">contact</a>
+            </li>
+          </ul>
+          <div class="langWrap">
+            <a href="#" language="english" class="active">EN</a>
+            <a href="#" language="italian">ITA</a>
           </div>
           <div class="nav-btn">
             <i class="fa-solid fa-bars"></i>
           </div>
         </div>
-        <ul class="nav-links">
-          <li class="nav-link">
-            <a class="navHome" href="./index.html">home</a>
-          </li>
-          <li class="nav-link">
-            <a class="navAbout" href="./about.html">about</a>
-          </li>
-          <li class="nav-link">
-            <a class="navProjects" href="./projects.html">projects</a>
-          </li>
-          <li class="nav-link">
-            <a class="navContact" href="./contact.html">contact</a>
-          </li>
-          <!-- test -->
-
-          <div class="langWrap">
-            <a href="#" language="english" class="active">EN</a>
-            <a href="#" language="italian">ITA</a>
-            <!-- <a href="#" language="japanese">あ</a> -->
-          </div>
-        </ul>
       </div>
     </nav>
     <!-------------------------end of navbar------------------>
@@ -110,7 +112,7 @@
         <div class="underline"></div>
       </div>
       <div class="section-center">
-        <p class="page-text">
+        <p class="page-about-text">
           <span class="singleAboutText">
             Hello, I am Francesco Leccese and I am a Front-End developer. I live
             and work between Italy and Poland. I spend most of my day
@@ -126,6 +128,14 @@
             >@FranekDev</a
           >
         </p>
+        <p class="page-text">Here below you can view or download curriculum</p>
+        <div class="page-about-text cv-container">
+          <span>Franek CV</span>
+          <div class="download-area">
+            <a href="">684 KB</a>
+            <i class="fa-solid fa-file-pdf"></i>
+          </div>
+        </div>
       </div>
     </header>
 
