--- a/projects.html
+++ b/projects.html
@@ -35,32 +35,35 @@
       <div class="nav-center">
         <div class="nav-header">
           <div class="nav-logo">
-            <h2>franek<span class="temporary">Dev</span></h2>
+            <!-- <img src="./images/navLogo2.png" alt="" style="width: 8rem;"> -->
+            <h2>
+              franek<span class="temporary"
+                ><span class="capitalize">d</span>ev</span
+              >
+            </h2>
+          </div>
+          <ul class="nav-links">
+            <li class="nav-link">
+              <a class="navHome" href="./index.html">home</a>
+            </li>
+            <li class="nav-link">
+              <a class="navAbout" href="./about.html">about</a>
+            </li>
+            <li class="nav-link">
+              <a class="navProjects" href="./projects.html">projects</a>
+            </li>
+            <li class="nav-link">
+              <a class="navContact" href="./contact.html">contact</a>
+            </li>
+          </ul>
+          <div class="langWrap">
+            <a href="#" language="english" class="active">EN</a>
+            <a href="#" language="italian">ITA</a>
           </div>
           <div class="nav-btn">
             <i class="fa-solid fa-bars"></i>
           </div>
         </div>
-        <ul class="nav-links">
-          <li class="nav-link">
-            <a class="navHome" href="./index.html">home</a>
-          </li>
-          <li class="nav-link">
-            <a class="navAbout" href="./about.html">about</a>
-          </li>
-          <li class="nav-link">
-            <a class="navProjects" href="./projects.html">projects</a>
-          </li>
-          <li class="nav-link">
-            <a class="navContact" href="./contact.html">contact</a>
-          </li>
-
-          <div class="langWrap">
-            <a href="#" language="english" class="active">EN</a>
-            <a href="#" language="italian">ITA</a>
-            <!-- <a href="#" language="japanese">あ</a> -->
-          </div>
-        </ul>
       </div>
     </nav>
     <!-------------------------end of navbar------------------>
