--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
       </div>
       <div class="section-center">
         <p class="page-about-text">
-          <span class="singleAboutText">
+          <span class="singleAboutText1">
             Hello, I am Francesco Leccese and I am a Front-End developer. I live
             and work between Italy and Poland. I spend most of my day
             experimenting with HTML, CSS, JavaScript and its React and Vue
@@ -128,14 +128,19 @@
             >@FranekDev</a
           >
         </p>
-        <p class="page-text">Here below you can view or download curriculum</p>
-        <div class="page-about-text cv-container">
-          <span>Franek CV</span>
+        <p class="page-text singleAboutText2">
+          Here below you can view or download my curriculum
+        </p>
+        <a
+          href="./Francesco Leccese Curriculum Vitae .pdf"
+          class="page-about-text cv-container"
+        >
+          <span>Franek CV (ENG)</span>
           <div class="download-area">
-            <a href="">684 KB</a>
+            <span>684 KB</span>
             <i class="fa-solid fa-file-pdf"></i>
           </div>
-        </div>
+        </a>
       </div>
     </header>
 
