--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
           Here below you can view or download my curriculum
         </p>
         <a
-          href="./Francesco Leccese Curriculum Vitae .pdf"
+          href="./Francesco Leccese Curriculum Vitae (JUL).pdf"
           class="page-about-text cv-container"
         >
           <span>Franek CV (ENG)</span>
