--- a/projects.html
+++ b/projects.html
@@ -176,6 +176,53 @@
         </article>
         <article class="project-page-single">
           <div class="project-page-img">
+            <img
+              src="./images/tecnocupole.jpg"
+              alt=""
+              class="project-page-pic"
+            />
+            <a href="https://fmastrorocco.developing.it/" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>Tecnocupole Pancaldi</h4>
+            <p>
+              Project built from start to end during my work experience in
+              Developing.it.
+              <i>Tecnocupole Pancaldi</i> website has been built using
+              Wordpress, creating a custom template and utilizing the most
+              advanced <i>Wordpress</i> features.
+            </p>
+          </div>
+        </article>
+        <article class="project-page-single">
+          <div class="project-page-img">
+            <img
+              src="./images/maffei.jpg"
+              alt=""
+              class="project-page-pic"
+            />
+            <a href="https://lelesanto.developing.it/ target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>Studi Dentistici Maffei</h4>
+            <p>
+              Project built from start to end during my work experience in
+              Developing.it.
+              <i>Studi Dentistici Maffei</i> website has been built with <i>Wordpress</i> and by using <i>Elementor</i> page builder.
+            </p>
+          </div>
+        </article>
+
+        <article class="project-page-single">
+          <div class="project-page-img">
             <img src="./images/pic1.jpg" alt="" class="project-page-pic" />
             <a href="https://jumbo-clubs.netlify.app" target="_blank">
               <span class="page-icon">
