--- a/projects.html
+++ b/projects.html
@@ -123,7 +123,7 @@
               class="project-page-pic"
             />
             <a
-              href="https://www.mariamartinelli.it/immagini/blues-tarot-website/index.html"
+              href="https://blues-tarot.netlify.app"
               target="_blank"
             >
               <span class="page-icon">
