--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Deep care of the overall style of your app combined with the focus on the actual
         <p class="latest-works-text "> <span class="latestWorksText">Here below you can find some of my latest works and many more are stored in my </span><a class="cc projectPage" href="./projects.html">projects page</a>.</p>
       </div>
       <div class=" latest-works-center">
-              <a href="https://www.mariamartinelli.it/immagini/blues-tarot-website/index.html" target="_blank" class="area area-1">
+              <a href="https://blues-tarot.netlify.app" target="_blank" class="area area-1">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/blues tarot-arcani maggiori-WEBSITE-01.jpg" alt="" class="single-work-pic">
