--- a/projects.html
+++ b/projects.html
@@ -122,10 +122,7 @@
               alt=""
               class="project-page-pic"
             />
-            <a
-              href="https://blues-tarot.netlify.app"
-              target="_blank"
-            >
+            <a href="https://blues-tarot.netlify.app" target="_blank">
               <span class="page-icon">
                 <i class="fa-solid fa-house-chimney"></i>
               </span>
@@ -200,12 +197,8 @@
         </article>
         <article class="project-page-single">
           <div class="project-page-img">
-            <img
-              src="./images/maffei.jpg"
-              alt=""
-              class="project-page-pic"
-            />
-            <a href="https://lelesanto.developing.it/ target="_blank">
+            <img src="./images/maffei.jpg" alt="" class="project-page-pic" />
+            <a href="https://lelesanto.developing.it/" target="_blank">
               <span class="page-icon">
                 <i class="fa-solid fa-house-chimney"></i>
               </span>
@@ -216,7 +209,31 @@
             <p>
               Project built from start to end during my work experience in
               Developing.it.
-              <i>Studi Dentistici Maffei</i> website has been built with <i>Wordpress</i> and by using <i>Elementor</i> page builder.
+              <i>Studi Dentistici Maffei</i> website has been built with
+              <i>Wordpress</i> and by using <i>Elementor</i> page builder.
+            </p>
+          </div>
+        </article>
+        <article class="project-page-single">
+          <div class="project-page-img">
+            <img src="./images/verner.jpg" alt="" class="project-page-pic" />
+            <a
+              href="https://www.ernestverner.it/ernest-verner/"
+              target="_blank"
+            >
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>Ernest Verner</h4>
+            <p>
+              I'm responsible for maintaining and updating the
+              <i>Ernest Verner</i> website. This website has been built with
+              <i>Wordpress</i> and as of today I made some maintenance work,
+              added a Gallery page, language translation plug-in and I am
+              currently working on the payment plug-in functionality.
             </p>
           </div>
         </article>
