--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
 
     <!--------------------------header----------------------->
 
-    <header class="page-header section">
+    <header class="page-header page-header-about section">
       <div class="section-title">
         <h1 class="singleAboutTitle">about me</h1>
         <div class="underline"></div>
@@ -114,19 +114,27 @@
       <div class="section-center">
         <p class="page-about-text">
           <span class="singleAboutText1">
-            Hello, I am Francesco Leccese and I am a Front-End developer. I live
-            and work between Italy and Poland. I spend most of my day
-            experimenting with HTML, CSS, JavaScript and its React and Vue
-            frameworks. I enjoy coding and the challenge of learning something
-            new everyday. You can also find me on Linkedin</span
-          >
+            Doctor in Marketing and Business Communication and Front End
+            Developer with a six years career in an ICT company and two years of
+            programming experience. I have completed my Bachelor’s Degree in
+            Marketing and Business Communication at “Università degli Studi di
+            Bari” (Faculty of Economics and Commerce) and attended 1000+ hours
+            coding bootcamp to learn new markup and programming languages while
+            sharpening existing skills. I started my career in an ICT company as
+            first line IT consultant, progressed it as second line assistant and
+            product support engineer for reaching eventually the position of IT
+            Team Manager. I am currently working as a freelance front-end
+            developer and would like to apply my knowledge and passion for IT
+            and coding to a talented engineering team. I have a passion for IT
+            and web developing and professional growth.
+          </span>
 
-          <a
+          <!-- <a
             class="page-link"
             href="https://www.linkedin.com/in/franekdev"
             target="_blank"
             >@FranekDev</a
-          >
+          > -->
         </p>
         <p class="page-text singleAboutText2">
           Here below you can view or download my curriculum
