--- a/about.html
+++ b/about.html
@@ -128,13 +128,6 @@
             and coding to a talented engineering team. I have a passion for IT
             and web developing and professional growth.
           </span>
-
-          <!-- <a
-            class="page-link"
-            href="https://www.linkedin.com/in/franekdev"
-            target="_blank"
-            >@FranekDev</a
-          > -->
         </p>
         <p class="page-text singleAboutText2">
           Here below you can view or download my curriculum
@@ -143,7 +136,17 @@
           href="./Francesco Leccese Curriculum Vitae (Jul).pdf"
           class="page-about-text cv-container"
         >
-          <span>Franek CV (ENG)</span>
+          <span>Francesco Leccese CV (ENG)</span>
+          <div class="download-area">
+            <span>684 KB</span>
+            <i class="fa-solid fa-file-pdf"></i>
+          </div>
+        </a>
+        <a
+          href="./Francesco Leccese Curriculum Vitae (Dec-ITA).pdf"
+          class="page-about-text cv-container"
+        >
+          <span>Francesco Leccese CV (ITA)</span>
           <div class="download-area">
             <span>684 KB</span>
             <i class="fa-solid fa-file-pdf"></i>
