--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="FranekDev Portfolio Website" />
     <meta property="og:type" content="video.movie" />
     <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:image" content="./images/franekLogo.png" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
