--- a/index.html
+++ b/index.html
@@ -316,29 +316,34 @@ Deep care of the overall style of your app combined with the focus on the actual
       </div>
       <div class="section-center timeline-center">
         <article class="single-timeline">
-          <h4>2023</h4>
-          <p>Freelance FRONT-END DEVELOPER <br>Internship at Developing.it</p>   
+          <h4>2024</h4>
+          <p>freelance FRONT-END DEVELOPER <br>at FranekDev</p>   
           <span class="timeline-number">1</span>
+        </article>
+        <article class="single-timeline">
+          <h4>2023</h4>
+          <p>FRONT-END DEVELOPER <br>at Developing.it</p>   
+          <span class="timeline-number">2</span>
         </article>
 
         <article class="single-timeline">
           <h4>2022</h4>
           <p>IT CUSTOMER SERVICE TEAM MANAGER at Fujitsu (Łódź - Poland)
             Responsible for overseeing the day-to-day activities of service-desk operations to ensure users and business teams receive the support they require</p>
-          <span class="timeline-number">2</span>
+          <span class="timeline-number">3</span>
         </article>
         <article class="single-timeline">
           <h4>2019</h4>
 
           <p>IT CUSTOMER SERVICE EXPERT TECHNICIAN at Fujitsu (Łódź - Poland) Analyze and resolve customer concerns and problems, diagnose the root cause, and document interactions. Provide on-call and ongoing second line troubleshooting, technical, and hardware advice and suggestions. Support remote and local upgrades, installations, and maintenance.</p>
-          <span class="timeline-number">3</span>
+          <span class="timeline-number">4</span>
         </article>
         <article class="single-timeline">
           <h4>2017</h4>
           <p>IT CUSTOMER SERVICES AGENT at Fujitsu (Łódź - Poland) Providing first line IT support to users located worldwide and
 handling company’s high severity impact incidents.
 </p>
-          <span class="timeline-number">4</span>
+          <span class="timeline-number">5</span>
         </article>
 
       </div>
