--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="FranekDev Portfolio Website" />
-    <meta property="og:description" content="I am Francesco Leccese but you can call me Franek. I am a front-end developer with Marketing and Communication studies, six years of experience providing IT services for businesses and two years of experience in web development" />
+    <meta property="og:description" content="I am a front-end developer with Marketing and Communication studies, six years of experience providing IT services for businesses and two years of experience in web development" />
     <meta property="og:type" content="image" />
     <!-- <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" /> -->
     <meta property="og:image" content="./images/franekLogo.png" />
