--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="FranekDev Portfolio Website" />
     <meta property="og:description" content="I am a front-end developer with Marketing and Communication studies, six years of experience providing IT services for businesses and two years of experience in web development" />
-    <meta property="og:type" content="image" />
-    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
     <meta property="og:image" content="./images/franekLogo.png" />
+    <meta property="og:url" content="https://franekdev-portfolio.netlify.app/" />
+    <meta property="og:type" content="website" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
