--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="FranekDev Portfolio Website" />
     <meta property="og:description" content="I am a front-end developer with Marketing and Communication studies, six years of experience providing IT services for businesses and two years of experience in web development" />
-    <meta property="og:image" content="https://franekdev-portfolio.netlify.app/images/green4.jpg" />
+    <meta property="og:image" content="https://franekdev-portfolio.netlify.app/images/franekLogo.png" />
     <meta property="og:url" content="https://franekdev-portfolio.netlify.app/" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="style.css" />
@@ -78,7 +78,7 @@
         </ul>
         <ul class="sidebar-icons">
           <li class="sidebar-icon">
-            <a href="https://www.facebook.com//FranekDev" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.facebook.com/FranekDev" target="_blank"><i class="fa-brands fa-facebook"></i></a>
           </li>
           <li class="sidebar-icon">
             <a href="https://www.linkedin.com/in/franekDev" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
