--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="FranekDev Portfolio Website" />
-    <meta property="og:description" content="I am a front-end developer with Marketing and Communication studies, six years of experience providing IT services for businesses and two years of experience in web development" />
-    <meta property="og:image" content="https://franekdev-portfolio.netlify.app/images/franekLogo.png" />
+    <meta property="og:description" content="I am a front-end developer and this is my portfolio page" />
+    <meta property="og:image" content="https://franekdev-portfolio.netlify.app/images/franekLogo.png?v=3" />
     <meta property="og:url" content="https://franekdev-portfolio.netlify.app/" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="style.css" />
