--- a/index.html
+++ b/index.html
@@ -318,31 +318,31 @@ Deep care of the overall style of your app combined with the focus on the actual
       <div class="section-center timeline-center">
         <article class="single-timeline">
           <h4>2024</h4>
-          <p>freelance FRONT-END DEVELOPER <br>at FranekDev</p>   
+          <p >freelance FRONT-END DEVELOPER <br> <span class="singleTimeline1">at</span> FranekDev</p>   
           <span class="timeline-number">1</span>
         </article>
         <article class="single-timeline">
           <h4>2023</h4>
-          <p>FRONT-END DEVELOPER <br>at Developing.it</p>   
+          <p class="singleTimeline2">FRONT-END DEVELOPER <br><span class="singleTimeline1">at</span> Developing.it</p>   
           <span class="timeline-number">2</span>
         </article>
 
         <article class="single-timeline">
           <h4>2022</h4>
-          <p>IT CUSTOMER SERVICE TEAM MANAGER at Fujitsu (Łódź - Poland)
-            Responsible for overseeing the day-to-day activities of service-desk operations to ensure users and business teams receive the support they require</p>
+          <p >IT CUSTOMER SERVICE TEAM MANAGER at Fujitsu (Łódź - Poland)
+            <span class="singleTimeline3">Responsible for overseeing the day-to-day activities of service-desk operations to ensure users and business teams receive the support they require</span></p>
           <span class="timeline-number">3</span>
         </article>
         <article class="single-timeline">
           <h4>2019</h4>
 
-          <p>IT CUSTOMER SERVICE EXPERT TECHNICIAN at Fujitsu (Łódź - Poland) Analyze and resolve customer concerns and problems, diagnose the root cause, and document interactions. Provide on-call and ongoing second line troubleshooting, technical, and hardware advice and suggestions. Support remote and local upgrades, installations, and maintenance.</p>
+          <p >IT CUSTOMER SERVICE EXPERT TECHNICIAN <span class="singleTimeline1">at</span> Fujitsu (Łódź - Poland) <span class="singleTimeline4">Analyze and resolve customer concerns and problems, diagnose the root cause, and document interactions. Provide on-call and ongoing second line troubleshooting, technical, and hardware advice and suggestions. Support remote and local upgrades, installations, and maintenance.</span></p>
           <span class="timeline-number">4</span>
         </article>
         <article class="single-timeline">
           <h4>2017</h4>
-          <p>IT CUSTOMER SERVICES AGENT at Fujitsu (Łódź - Poland) Providing first line IT support to users located worldwide and
-handling company’s high severity impact incidents.
+          <p>IT CUSTOMER SERVICES AGENT <span class="singleTimeline1">at</span> Fujitsu (Łódź - Poland) <span class="singleTimeline5">Providing first line IT support to users located worldwide and
+          handling company’s high severity impact incidents.</span>
 </p>
           <span class="timeline-number">5</span>
         </article>
