--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="FranekDev Portfolio Website" />
-    <meta property="og:description" content="I am a front-end developer and this is my portfolio page" />
+    <meta property="og:description" content="A frontend developer portfolio page." />
     <meta property="og:image" content="https://franekdev-portfolio.netlify.app/images/franekLogo.png" />
     <meta property="og:url" content="https://franekdev-portfolio.netlify.app/" />
     <meta property="og:type" content="website" />
@@ -25,10 +25,10 @@
     <nav class="nav" id="nav">
       <div class="nav-center">
         <div class="nav-header">
-          <div class="nav-logo">
+          <a href="/index.html" class="nav-logo">
             <!-- <img src="./images/navLogo2.png" alt="" style="width: 8rem;"> -->
             <h2>franek<span class="temporary"><span class="capitalize">d</span>ev</span></h2>
-          </div>
+          </a>
           <ul class="nav-links">
             <li class="nav-link">
               <a class="navHome" href="./index.html">home</a>
@@ -318,32 +318,32 @@ Deep care of the overall style of your app combined with the focus on the actual
       <div class="section-center timeline-center">
         <article class="single-timeline">
           <h4>2024</h4>
-          <p >freelance FRONT-END DEVELOPER <br> <span class="singleTimeline1">at</span> FranekDev</p>   
+          <p >Freelance FRONT-END DEVELOPER  <span class="singleTimeline1">at</span> FranekDev <br><span class="singleTimeline01">Build, create and maintain full responsive web app or websites. More information about the technologies used for building each of the websites are available in my </span> <a href="./projects.html" class="page-link">Projects Page<a></a></p>   
           <span class="timeline-number">1</span>
         </article>
         <article class="single-timeline">
           <h4>2023</h4>
-          <p class="singleTimeline2">FRONT-END DEVELOPER <br><span class="singleTimeline1">at</span> Developing.it</p>   
+          <p class="singleTimeline2">FRONT-END DEVELOPER <span class="singleTimeline1">at</span> Developing.it <br><span class="singleTimeline02"> Building frontend
+interface of companies management system and Wordpress websites using custom templates</span></p>   
           <span class="timeline-number">2</span>
         </article>
 
         <article class="single-timeline">
           <h4>2022</h4>
-          <p >IT CUSTOMER SERVICE TEAM MANAGER at Fujitsu (Łódź - Poland)
+          <p >IT CUSTOMER SERVICE TEAM MANAGER at Fujitsu (Łódź - Poland) <br>
             <span class="singleTimeline3">Responsible for overseeing the day-to-day activities of service-desk operations to ensure users and business teams receive the support they require</span></p>
           <span class="timeline-number">3</span>
         </article>
         <article class="single-timeline">
           <h4>2019</h4>
 
-          <p >IT CUSTOMER SERVICE EXPERT TECHNICIAN <span class="singleTimeline1">at</span> Fujitsu (Łódź - Poland) <span class="singleTimeline4">Analyze and resolve customer concerns and problems, diagnose the root cause, and document interactions. Provide on-call and ongoing second line troubleshooting, technical, and hardware advice and suggestions. Support remote and local upgrades, installations, and maintenance.</span></p>
+          <p>IT CUSTOMER SERVICE EXPERT TECHNICIAN <span class="singleTimeline1">at</span> Fujitsu (Łódź - Poland) <br> <span class="singleTimeline4">Analyze and resolve customer concerns and problems, diagnose the root cause, and document interactions. Provide on-call and ongoing second line troubleshooting, technical, and hardware advice and suggestions. Support remote and local upgrades, installations, and maintenance.</span></p>
           <span class="timeline-number">4</span>
         </article>
         <article class="single-timeline">
           <h4>2017</h4>
-          <p>IT CUSTOMER SERVICES AGENT <span class="singleTimeline1">at</span> Fujitsu (Łódź - Poland) <span class="singleTimeline5">Providing first line IT support to users located worldwide and
-          handling company’s high severity impact incidents.</span>
-</p>
+          <p>IT CUSTOMER SERVICES AGENT <span class="singleTimeline1">at</span> Fujitsu (Łódź - Poland) <br><span class="singleTimeline5">Providing first line IT support to users located worldwide and
+          handling company’s high severity impact incidents.</span></p>
           <span class="timeline-number">5</span>
         </article>
 
