--- a/projects.html
+++ b/projects.html
@@ -34,14 +34,15 @@
     <nav class="nav" id="nav">
       <div class="nav-center">
         <div class="nav-header">
-          <div class="nav-logo">
+          <a href="/index.html" class="nav-logo">
             <!-- <img src="./images/navLogo2.png" alt="" style="width: 8rem;"> -->
             <h2>
               franek<span class="temporary"
                 ><span class="capitalize">d</span>ev</span
               >
             </h2>
-          </div>
+          </a>
+
           <ul class="nav-links">
             <li class="nav-link">
               <a class="navHome" href="./index.html">home</a>
